--- a/_includes/disqus.html
+++ b/_includes/disqus.html
@@ -3,10 +3,10 @@
 <div id="disqus_thread"></div>
 <script type="text/javascript">
 		/* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-		var disqus_shortname = '{{ site.disqus }}'; // required: replace example with your forum shortname
+		var disqus_shortname = 'mouseonthekeys'; // required: replace example with your forum shortname
 		var disqus_identifier = '{{ page.url }}';
 		var disqus_url = '{{ site.url }}{{ page.url }}';
- 
+
             /* * * DON'T EDIT BELOW THIS LINE * * */
             (function() {
                 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
