--- a/_includes/social.html
+++ b/_includes/social.html
@@ -21,6 +21,9 @@
     {% if site.instagram %}
 	  <a href="https://www.instagram.com/{{ site.instagram }}"><i class="fa fa-instagram"></i></a>
 		{% endif %}
+	{% if site.dev %}
+	  <a href="https://dev.to/{{ site.dev }}"><i class="fa fa-dev"></i></a>
+		{% endif %}
     {% if site.lastfm %}
 	  <a href="https://www.last.fm/user/{{ site.lastfm }}"><i class="fa fa-lastfm"></i></a>
     {% endif %}
