--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -4,41 +4,22 @@
   <div class="panel panel-default">
     <div class="panel-body">
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 1</a></strong>
-			- Ei viderer tacimates pro, quem assum ea nam. Veritus omnesque eam te. Et natum mucius tamquam vel,
-			ea dolorem volumus deterruisset nec. Graeci mentitum sea an, eu prima elaboraret est.
+			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Game Pong</a></strong>
+			Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server. 
 		</h5>
 		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 2</a></strong>
-			- An eripuit phaedrum qui, nec facer splendide ex, vel ea assum facilisi convenire.
-			Te his neglegentur consectetuer.
+			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Wind Tunnel site</a></strong>
+			During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system. 
 		</h5>
     	<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="#">Project 3</a></strong>
-			- An alii quot tantas eum, doming platonem persecuti mea et, vim perpetua cotidieque delicatissimi in.
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water level detection</a></strong>
+			A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 4</a></strong>
-			- Vim an case vidit sententiae, est at euismod laboramus efficiantur. Ei sit brute lorem,
-			ea eam timeam viderer aliquid, cu integre omittam moderatius quo.
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/FluidMechanics">Fluid Mechanics</a></strong>
+			Some of the scripts for visualization and easier understanding of selected topics from subject Fluid Mechanics and Dynamics written in Python programming language, used libraries are  Numpy, Math and Matplotlib.
 		</h5>
-		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Project 5</a></strong>
-			- Dicta causae meliore ex vel, in vix erant integre petentium. Vix ei nisl scripta recusabo,
-			eam doming blandit facilisis.
-		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 6</a></strong>
-			- Inermis recusabo elaboraret mea et, dicat neglegentur vim te. Nec et sanctus scriptorem,
-			usu ex sapientem gubergren. Tamquam admodum ei usu.
-		</h5>
-		<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Project 7</a></strong>
-			- Essent putant indoctum sed in, reprimique persequeris neglegentur te quo. Nam rebum
-			tractatos partiendo at, debet ubique oporteat ut his.
-		</h5>
-
-
+		
     </div>
   </div>
 </div>
