--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,22 +3,23 @@
   <h3>Projects</h3>
   <div class="panel panel-default">
     <div class="panel-body">
+    	<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/FluidMechanics">Fluid Mechanics</a></strong>
+			- Some of the scripts for visualization and easier understanding of selected topics from subject Fluid Mechanics and Dynamics written in Python programming language, used libraries are  Numpy, Math and Matplotlib.
+		</h5>
 		<h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Game Pong</a></strong>
-			Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server. 
+			- Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server. 
 		</h5>
 		<h5>
-			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Wind Tunnel site</a></strong>
-			During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system. 
+			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Wind Tunnel Site</a></strong>
+			- During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system. 
 		</h5>
     	<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water level detection</a></strong>
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water Level Detection</a></strong>
 			A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
 		</h5>
-		<h5>
-			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/FluidMechanics">Fluid Mechanics</a></strong>
-			Some of the scripts for visualization and easier understanding of selected topics from subject Fluid Mechanics and Dynamics written in Python programming language, used libraries are  Numpy, Math and Matplotlib.
-		</h5>
+		
 		
     </div>
   </div>
