--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -17,7 +17,7 @@
 		</h5>
     	<h5>
 			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water Level Detection</a></strong>
-			A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
+			- A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
 		</h5>
 		
 		
