--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,7 +7,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="{{ site.baseurl }}blog.html">BLOG</a></li>
         <li><a href="{{ site.baseurl }}projects.html">PROJECTS</a></li>
-        <li><a href="https://1drv.ms/b/s!ApWwAcaDTgvNjkGs-yqJn_NyohD5?e=0mLFQi">RESUME</a></li>
+        <li><a href="https://mouseonthekeys.github.io/cv/">RESUME</a></li>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
         <li><a href="https://feedburner.google.com/fb/a/mailverify?uri=MouseOnTheKeys-NenadBubaloBlogs&amp;loc=en_US" onclick="window.open(this.href, 'mywin',
           'left=20,top=20,width=500,height=500,toolbar=1,resizable=0'); return false;" >
