--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -14,7 +14,7 @@ comments: true
 		{{ page.date | date: "%B %e, %Y" }}
 			&nbsp;&nbsp;
 			{% for tag in page.tags %}
-			 <span class="label label-success">{{ tag }}</span>
+			 <span class="label label-primary">{{ tag }}</span>
 			{% endfor %}
 		</h4>
 	</div>
