--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,6 +8,14 @@
 			- Some of the scripts for visualization and easier understanding of selected topics from subject Fluid Mechanics and Dynamics written in Python programming language, used libraries are  Numpy, Math and Matplotlib.
 		</h5>
 		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/Project_Euler">Project Euler Problems</a></strong>
+			- During the first year of master studies, I took a self-initiative of solving problems on <a href="https://projecteuler.net">projecteuler.net</a> site using Python or C programming language. The solutions to the problems have detailed explanation and methods used in acquiring results. Professor liked the idea very much, so he started to implement problems from the site in his lectures.
+		</h5>
+		<h5>
+			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water Level Detection</a></strong>
+			- A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
+		</h5>
+		<h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Game Pong</a></strong>
 			- Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server. 
 		</h5>
@@ -15,10 +23,7 @@
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Wind Tunnel Site</a></strong>
 			- During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system. 
 		</h5>
-    	<h5>
-			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water Level Detection</a></strong>
-			- A project of detecting water levels in rooms of high importance was completed on my end year of bachelor studies,  I was using micro-controller Arduino, liquid fluids sensors and "C"  for programming AVR Microcontrollers. The project had complete supporting technical documentation (written in the Serbian language).
-		</h5>
+    	
 		
 		
     </div>
