--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -9,7 +9,7 @@
 		</h5>
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/Project_Euler">Project Euler Problems</a></strong>
-			- During the first year of master studies, I took a self-initiative of solving problems on <a href="https://projecteuler.net">projecteuler.net</a> site using Python or C programming language. The solutions to the problems have detailed explanation and methods used in acquiring results. Professor liked the idea very much, so he started to implement problems from the site in his lectures.
+			- During the first year of master studies, I took a self-initiative of solving problems on projecteuler.net<a href="https://projecteuler.net">projecteuler.net</a> site using Python or C programming language. The solutions to the tasks have a detailed explanation and methods used in acquiring results. Professor liked the idea very much, so he started implementing problems from the site in his lectures.
 		</h5>
 		<h5>
 			<i class="fa fa-cog"></i>&nbsp;&nbsp;<strong><a href="#">Water Level Detection</a></strong>
