--- a/_layouts/layout.html
+++ b/_layouts/layout.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta name="googlebot" content="noindex">
+    <meta name="AdsBot-Google" content="noindex" />
     <meta name="googlebot-news" content="nosnippet">
     <meta name="google-site-verification" content="VhzF7JCu2mb_RQCmz1HYf_82tY81Xn9IY_2gA29Cyp4" />
     <meta charset="utf-8">
