project added parsing and cleansing

--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -3,6 +3,10 @@
   <h3>Projects</h3>
   <div class="panel panel-default">
     <div class="panel-body">
+		<h5>
+			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/Parsing_Cleansing_Python">Data Parsing and Clensing</a></strong>
+			- Case study solution. Parsing and cleansing data from nested objects in JSON file. Detailed task is in readme.md, also solution with comments are presented on repository on GitHub. Used Python 3.8 with pandas. Also hese is small Linux exercise using linux commands in terminal.
+		</h5>
     	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/FluidMechanics">Fluid Mechanics</a></strong>
 			- Some of the scripts for visualization and easier understanding of selected topics from subject Fluid Mechanics and Dynamics written in Python programming language, used libraries are  Numpy, Math and Matplotlib.
