--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -5,7 +5,7 @@
     <div class="panel-body">
 		<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/Parsing_Cleansing_Python">Data Parsing and Clensing</a></strong>
-			- Case study solution. Parsing and cleansing data from nested objects in JSON file. Detailed task is in readme.md, also solution with comments are presented on repository on GitHub. Used Python 3.8 with pandas. Also hese is small Linux exercise using linux commands in terminal.
+			- Case study solution. Parsing and cleansing data from nested objects in JSON file. Detailed task is in README.md, also solution with comments are presented on repository on GitHub. Used Python 3.8 with Pandas library. Also there is small search and explain exercise using Linux commands in terminal.
 		</h5>
     	<h5>
 			<i class="fa fa-github"></i>&nbsp;&nbsp;<strong><a href="https://github.com/MouseOnTheKeys/FluidMechanics">Fluid Mechanics</a></strong>
@@ -21,15 +21,15 @@
 		</h5>
 		<h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Game Pong</a></strong>
-			- Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server. 
+			- Project web game of Pong using JavaScript, HTML5, CSS3 was done in the second year of my bachelor studies, for ranking and tracking results, I used MySQL database on WAMP local server.
 		</h5>
 		<h5>
 			<i class="fa fa-globe"></i>&nbsp;&nbsp;<strong><a href="#">Wind Tunnel Site</a></strong>
-			- During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system. 
+			- During course basics of web-programming, in the second year of my bachelor studies,  I did a static site for a Laboratory aerospace (wind-tunnel ) "Miroslav Nenadovic",  creating a dynamic gallery with geolocation and integrated message system.
 		</h5>
-    	
-		
-		
+
+
+
     </div>
   </div>
 </div>
