Year in footnote updated

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,12 @@
 <footer>
-    <div id="footer">
-        <div class="container">
-            <p class="text-muted">Nenad Bubalo 2019 © All rights reserved. Powered by <a href="http://jekyllrb.com/">Jekyll</a> and
-            <a href="https://github.com/MouseOnTheKeys">MouseOnTheKeys</a> </p>
-        </div>
+  <div id="footer">
+    <div class="container">
+      <p class="text-muted">
+        Nenad Bubalo 2019-2020 © All rights reserved. Powered by
+        <a href="http://jekyllrb.com/">Jekyll</a> and
+        <a href="https://github.com/MouseOnTheKeys">MouseOnTheKeys</a>
+      </p>
     </div>
+  </div>
 </footer>
 <div class="footer"></div>
